Adapting unit-testing